# quickscribe

./: .gitignore  AUTH.md  CLAUDE.md  DELETE_SOLUTION.md  DIRECTORY_MAPPING.md  Makefile  Participant_Management_Implementation_Plan.md  README.md  SPEECH_API_REMOVAL.md  TODOs  code4llm.yaml  dir_structure.txt  docker-compose.yml  dump_repo.cfg  dump_repo.py  file_index.json  repo.txt  ui_migration_plan.md  ui_mockup_example.html
backend/: .gitignore  API_SPECIFICATION.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  SYSTEM_DESCRIPTION.md  ai_postprocessing.py  api_version.py  app.py  auth.py  auth_ids  azure_diarization.json  blob_util.py  check-azure-quotas.sh  config.py  cosmos_db_guide.md  cosmos_schema  deploy-local.sh  deploy-to-azure.sh  dryrun-deploy.sh  dump_repo.cfg  example.env  fileinclude  filelist.txt  fixup_cosmos_data.py  generate_example_env.py  generate_filelist.py  llms.py  logging_config.py  manage.py  prompts.yaml  pytest.ini  qc  recording_handler.py  repo.txt  repo2file.exclusion  requirements.txt  run_dynamic_analysis_tests.py  run_tests.py  (+8 more)
docs/: type-sharing-pattern.md
frontend/: Makefile  index.html  package.json  vite.config.ts
frontend_new/: ARCHITECTURE.md  Dockerfile  README.md  glassmorphism-test.html  package-lock.json  package.json  vite.config.ts
functions/: Makefile  api_version.py  function_app.py  requirements.txt  scratch.py  test_function.py  test_function.sh
plans/: admin_interface.md  commit-changes.md  dynamic-analysis-types.md  multi-transcript-chat.md  update-documentation.md
plaud_sync_service/: .gitignore  AI_POSTPROCESSING.md  AZURE_SPEECH_TRANSCRIPTION_GUIDE.md  Dockerfile  Dockerfile.job  Makefile  README.md  SYSTEM_DESCRIPTION.md  cleanup_test_run.py  clear_locks.py  function_app.py  job_executor.py  logging_handler.py  (+11 more)
plaud_sync_service/azure_speech/python-client/: BUILD_GUIDE.md  LICENSE  MANIFEST.in  Makefile  PACKAGE_INFO.md  README.md  pyproject.toml
plaud_sync_service/azure_speech/python-client/azure_speech_client/: __init__.py  api_client.py  configuration.py
plaud_sync_service/azure_speech/python-client/azure_speech_client/api/: __init__.py  custom_speech_datasets_for_model_adaptation_api.py  custom_speech_endpoints_api.py  custom_speech_model_evaluations_api.py  custom_speech_models_api.py  custom_speech_operations_api.py  custom_speech_projects_api.py  custom_speech_transcriptions_api.py  custom_speech_web_hooks_api.py
plaud_sync_service/azure_speech/python-client/azure_speech_client/models/: __init__.py  base_model.py  base_model_deprecation_dates.py  base_model_features.py  base_model_links.py  base_model_properties.py  block_kind.py  commit_blocks_entry.py  custom_model.py  custom_model_deprecation_dates.py  custom_model_features.py  custom_model_links.py  custom_model_properties.py  dataset.py  dataset_kind.py  dataset_links.py  dataset_locales.py  dataset_properties.py  dataset_update.py  detailed_error_code.py  diarization_properties.py  diarization_speakers_properties.py  edits_summary.py  endpoint.py  endpoint_links.py  endpoint_properties.py  endpoint_properties_update.py  endpoint_update.py  entity_error.py  entity_reference.py  error.py  error_code.py  evaluation.py  evaluation_links.py  evaluation_properties.py  evaluation_update.py  file.py  file_kind.py  file_links.py  file_properties.py  (+43 more)
v2/backend/: MCP_SPEC.md  MEETING_NOTES_PLAN.md  pyproject.toml  qs-mcp
v2/backend/experiments/meeting_notes_test/: generate_test_notes.py
v2/backend/experiments/meeting_notes_test/output/: 01_Creating Reliable LLM Evaluation Rubrics for Wikis.md  02_Integrating Memory into GitHub Agentic Workflows.md  03_Standup_ Identity Broker Break_ Automation _ Azure Search.md  04_Exploring a Move to Google_s AI Platforms Team.md  05_Manuscript Revision Plan and Publication Decision.md  06_Research lab meeting_ leadership shift and agent AI demos.md  07_AI-Driven Demos_ ZK Proof Chain_ BioEmu _ Paper Digest.md  08_ADHD Evaluation and Medication Plan for 11_Year_Old.md
v2/backend/src/app/: auth.py  config.py  database.py  main.py  models.py
v2/backend/src/app/prompts/: __init__.py  deep_search_extract.j2  deep_search_router_batch.j2  deep_search_router_single.j2  deep_search_synthesize.j2  generate_meeting_notes.j2  generate_search_summary.j2  generate_title_description.j2  infer_speaker_names.j2
v2/backend/src/app/routers/: ai.py  collections.py  mcp_tokens.py  mcp_tools.py  participants.py  recordings.py  search.py  settings.py  sync.py  tags.py
v2/backend/src/app/scheduler/: jobs.py
v2/backend/src/app/services/: ai_service.py  collection_service.py  deep_search.py  embedding_engine.py  mcp_search_service.py  mcp_token_service.py  meeting_notes_service.py  participant_service.py  plaud_client.py  profile_bootstrap.py  profile_store.py  recording_service.py  run_logger.py  search_summary_service.py  speaker_processor.py  speech_client.py  storage_service.py  sync_service.py  tag_service.py
v2/backend/tests/: conftest.py  test_ai.py  test_auth.py  test_mcp_tokens.py  test_mcp_tools.py  test_meeting_notes.py  test_participants.py  test_recordings.py  test_sync.py  test_tags.py
(+453 files in other folders)
