[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-speech-client"
version = "3.2.0"
description = "Python client for Azure Speech Services API v3.2"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "QuickScribe Team"}
]
keywords = ["azure", "speech", "cognitive-services", "transcription", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "certifi>=2023.7.22",
    "python-dateutil>=2.8.2",
    "six>=1.16.0",
    "urllib3>=2.0.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
]

[project.urls]
Homepage = "https://github.com/your-org/quickscribe"
Documentation = "https://learn.microsoft.com/azure/cognitive-services/speech-service/"
Repository = "https://github.com/your-org/quickscribe"
Issues = "https://github.com/your-org/quickscribe/issues"

[tool.setuptools]
packages = ["azure_speech_client", "azure_speech_client.api", "azure_speech_client.models"]
include-package-data = true

[tool.setuptools.package-data]
azure_speech_client = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=azure_speech_client --cov-report=term-missing"
